Responsive layout fix
Fixed an issue causing responsive layout to break at MD

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
+
+
 * {
   box-sizing: border-box;
   margin:0;
   padding:0;
 }
+
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -39,10 +46,11 @@ h1 {
   margin:0;
 }
 
+
 /* Simple Responsive Framework. */
 .row {
-  margin: 24px;
-  max-width: 100%;
+  display: inline-block;
+  margin-bottom: 48px;
 }
 
 
@@ -50,7 +58,7 @@ h1 {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    margin:24px;
+    padding:24px;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -95,7 +103,7 @@ h1 {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    margin: 24px;
+    padding: 24px;
   }
   .col-md-1 {
     width: 8.33%;
@@ -139,7 +147,7 @@ h1 {
 @media (max-width: 767px) {
   .col-sm-1, .col--2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    margin-bottom: 24px;
+    padding: 24px;
   }
   .col-sm-1 {
     width: 8.33%;
@@ -191,7 +199,7 @@ h1 {
   top: 0px;
   right:0px;
   margin-bottom: 24px;
-  border: 1px solid rgba(0,0,0,.1);
+  border: 1px solid rgba(0,0,0,.05);
   width: 160px;
 }
 
